# HubHomeAssignment

./: .gitignore  CMakeLists.txt  README.md  TASK.md  main.cpp  pch.hpp  songs.json
Nodes/BaseNode/: BaseNode.hpp
Nodes/TerminalNode/: PlayTerminal.hpp  SkipTerminal.hpp
Nodes/TestNodes/: ArtistTest.hpp  BPMTest.hpp  GenreTest.hpp  LengthTest.hpp
RuleParser/: RuleParser.cpp  RuleParser.hpp
RuleTester/: RuleTester.cpp  RuleTester.hpp
trees/: buzz-a  example  ilan-r  mae-j  neil-a  valentina-t  yang-l  yuri-g
